--- a/src/template.html
+++ b/src/template.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     
+    <div id="app">
+      <header id="header"></header>
+      <main id="main"></main>
+      <footer id="footer"></footer>
+    </div>
+
 </body>
 </html>
