--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Page</title>
-<script defer src="main.js"></script></head>
-<body>
-    
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="88c61629ac70d06ebfa6.png" type="image/x-icon"><title>VARXY STEAKHOUSE | Odin Project</title><script defer="defer" src="main.js"></script></head><body><div id="app"><header id="header"></header><main id="main"></main><footer id="footer"></footer></div></body></html>
